@@ -42,6 +42,7 @@ dependencies {
 To use model checking strategy for Java 9 and later, add the following JVM properties:
 
 ```text
+--add-opens", "java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
 --add-exports java.base/jdk.internal.util=ALL-UNNAMED
 --add-exports java.base/sun.security.action=ALL-UNNAMED
