@@ -107,6 +107,7 @@ class CounterTest {
 > ```
 > tasks.withType<Test> {
 >   jvmArgs(
+>     "--add-opens", "java.base/java.lang=ALL-UNNAMED",
 >     "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
 >     "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
 >     "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
